// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<img
  alt="This is alt text for this image"
  className="Image__ImageWrapper-sc-18abvff-0 CRyKg"
  height={null}
  onClick={null}
  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
  title="This is alt text for this image"
  width="10rem"
/>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 CRyKg"
    height={null}
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="10rem"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 wbKFJ"
    height={null}
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="8rem"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 ixKnRv"
    height={null}
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="6rem"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 htWIbp"
    height={null}
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="4rem"
  />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 CRyKg"
    height={null}
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="10rem"
  />
  <img
    alt="This is alt text for this image"
    className="Image__ImageWrapper-sc-18abvff-0 kSWhOs"
    height={null}
    onClick={null}
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
    title="This is alt text for this image"
    width="10rem"
  />
</section>
`;
